syntax = "proto3";

option go_package="project-go-gRPC/gRPC";

message SumRequest {
  int32 x = 1;
  int32 y = 2;
}

message SumResponse {
  int32 result = 1;
}

service Sum {
  rpc SumNumber(SumRequest) returns (SumResponse){}
}